# Modular

./: .gitignore  CMakeLists.txt  README.md
include/: GameBanana.h  NexusMods.h  Rename.h
src/: GameBanana.cpp  NexusMods.cpp  Rename.cpp  main.cpp
